--- a/i18n/locales/ar.json
+++ b/i18n/locales/ar.json
@@ -675,11 +675,11 @@
    "heading3": "٣. الوضع القانوني",
    "section3": "يتم تشغيل تاسك من قبل مجموعة من الأفراد وهو غير مؤسس أو مسجل كشركة في البحرين. يعمل تاسك فقط كمنصة وسيطة محايدة - وليس كصاحب عمل أو ممثل أو ضامن لأي مستخدم.",
    "heading4": "٤. وصف الخدمة",
-   "section4": "تاسك يمكّن التواصل والتنسيق بين العملاء والمنفذين. تاسك لا يقوم بـ: • فحص هويات المستخدمين أو مهاراتهم أو مؤهلاتهم • إدارة التسعير أو التنفيذ أو جودة  مستخدمي الخدمات • الإشراف على أو توجيه أي مهمة على جميع التفاعلات والاتفاقيات والخدمات هي بين  المستخدمين. تاسك لا يضمن أي نتيجة.",
+   "section4": "تاسك يمكّن التواصل والتنسيق بين العملاء والمنفذين. تاسك لا يقوم بـ: • فحص هويات المستخدمين أو مهاراتهم أو مؤهلاتهم • إدارة التسعير أو التنفيذ أو جودة الخدمات • الإشراف على أو توجيه أي مهمة\n\nجميع التفاعلات والاتفاقيات والخدمات هي بين المستخدمين. تاسك لا يضمن أي نتيجة.",
    "heading5": "٥. المحتوى والتزامات المستخدم",
-   "section5": "تحتفظ بملكية المحتوى الخاص بك، لكنك تمنح تاسك ترخيصاً لاستخدامه. العملاء والمنفذون مسؤولون عن ضمان أن المحتوى قانوني ودقيق ولا ينتهك حقوق الآخرين.المحتوى المحظور يشمل على سبيل المثال لا الحصر: • المحتوى غير القانوني أو التشهيري أو التمييزي • البيانات الشخصية غير المصرح بها • البرامج الضارة أو الرسائل غير المرغوب فيها",
+   "section5": "تحتفظ بملكية المحتوى الخاص بك، لكنك تمنح تاسك ترخيصاً لاستخدامه. العملاء والمنفذون مسؤولون عن ضمان أن المحتوى قانوني ودقيق ولا ينتهك حقوق الآخرين.\n\nالمحتوى المحظور يشمل على سبيل المثال لا الحصر: • المحتوى غير القانوني أو التشهيري أو التمييزي • البيانات الشخصية غير المصرح بها • البرامج الضارة أو الرسائل غير المرغوب فيها",
    "heading6": "٦. تحديد المسؤولية",
-   "section6": "إلى أقصى حد قانوني في إطار القانون البحريني، تاسك غير مسؤول عن أي خسارة أو إصابة أو أضرار ناشئة عن التفاعلات بين المستخدمين. هذا يشمل فيما يتعلق بـ: • أداء المهام أو التأخير أو الإلغاءات • سوء السلوك أو الإهمال • نزاعات الدفع أو عدم الرضا عن الخدمة • سوء الاستخدام أو الوصول غير المصرح به للمحتوى أو الوثائق تستخدم التطبيق على مسؤوليتك الخاصة بالكامل.",
+   "section6": "إلى أقصى حد قانوني في إطار القانون البحريني، تاسك غير مسؤول عن أي خسارة أو إصابة أو أضرار ناشئة عن التفاعلات بين المستخدمين. هذا يشمل فيما يتعلق بـ: • أداء المهام أو التأخير أو الإلغاءات • سوء السلوك أو الإهمال • نزاعات الدفع أو عدم الرضا عن الخدمة • سوء الاستخدام أو الوصول غير المصرح به للمحتوى أو الوثائق\n\nتستخدم التطبيق على مسؤوليتك الخاصة بالكامل.",
    "heading7": "٧. المدفوعات",
    "section7": "قد يسهل تاسك الاتصالات مع معالجات الدفع، لكن تاسك لا يعالج أو يحتفظ بالأموال. تاسك غير مسؤول عن فشل المعاملات أو النزاعات - يجب حلها مباشرة بين المستخدمين أو عبر مقدم خدمة الدفع.",
    "heading8": "٨. الملكية الفكرية",
