--- a/i18n/locales/ar.json
+++ b/i18n/locales/ar.json
@@ -137,14 +137,22 @@
    },
    "clientHome": {
      "greeting": "مرحبًا {{name}}،",
-     "defaultName": "عزيزي",
-     "subtitle": "في ماذا تحتاج إلى مساعدة اليوم؟",
+     "defaultName": "طارق",
+     "subtitle": "مرحبًا بك في تاسك!",
      "postTaskBtn": "أنشئ مهمة",
      "yourTasks": "مهامك",
      "noTasks": "لم تقم بإنشاء أي مهام بعد.",
      "viewDetails": "عرض التفاصيل",
      "errorTitle": "خطأ",
      "loadTasksError": "تعذر تحميل المهام.",
+     "messages": "{{count}} رسائل غير مقروءة",
+     "needSomethingDone": "تحتاج شيئًا يُنجز؟",
+     "needSomethingDoneDesc": "لديك شيء في قائمة المهام؟ أنشئ مهمة واترك المنفذين يتولونها بموثوقية مع عروض تنافسية",
+     "waitingOnTask": "في انتظار مهمة؟",
+     "waitingOnTaskDesc": "في انتظار عروض المنفذين على مهامك؟ تحقق من المهام المعلقة للحصول على التحديثات",
+     "tasksUnderway": "مهام قيد التنفيذ؟ اضغط للتحقق من تقدمها",
+     "pendingTasks": "المهام المعلقة",
+     "inProgressTasks": "المهام قيد التنفيذ",
      "status": {
        "pending": "قيد الانتظار",
        "started": "قيد التنفيذ",
