--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -123,14 +123,22 @@
   },
   "clientHome": {
     "greeting": "Hi {{name}},",
-    "defaultName": "there",
-    "subtitle": "What do you need help with today?",
+    "defaultName": "Tariq",
+    "subtitle": "Welcome to TASK!",
     "postTaskBtn": "Post a Task",
     "yourTasks": "Your Tasks",
     "noTasks": "You haven't posted any tasks yet.",
     "viewDetails": "View Details",
     "errorTitle": "Error",
     "loadTasksError": "Could not load tasks.",
+    "messages": "{{count}} unread messages",
+    "needSomethingDone": "Need something done?",
+    "needSomethingDoneDesc": "Have something on your to-do list? Post a task and let Taskers handle it reliably with competitive offers",
+    "waitingOnTask": "Waiting on a Task?",
+    "waitingOnTaskDesc": "Waiting for Taskers to bid on your tasks? Check Pending tasks for updates",
+    "tasksUnderway": "Tasks underway? Tap to check their progress",
+    "pendingTasks": "Pending Tasks",
+    "inProgressTasks": "In Progress Tasks",
     "status": {
       "pending": "Pending",
       "started": "Started",
