--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -554,20 +554,51 @@
   "chat": "Chat",
   "report": "Report",
   "cancel": "Cancel",
-  "previous": "Previous",
   "viewDetails": "View Details",
+  "viewTaskDetails": "View Task Details",
   "completed": "Completed",
   "cancelledByYou": "Cancelled by you",
   "cancelledByClient": "Cancelled by Client",
   "reportClient": "Report Client",
-  "reportPrompt": "Enter reason for reporting this client:",
+  "reportPrompt": "Please describe the issue with this client:",
+  "reportPlaceholder": "Describe the issue...",
   "reportCancel": "Cancel",
   "reportSubmit": "Submit",
-  "reportedTitle": "Reported",
-  "reportedMessage": "Client has been reported successfully.",
+  "reportedTitle": "Report Submitted",
+  "reportedMessage": "Thank you for your report. We will review it shortly.",
   "errorTitle": "Error",
-  "reportError": "Failed to submit report.",
-  "loadError": "Failed to load tasks.",
+  "reportError": "Failed to submit report. Please try again.",
+  "loadError": "Failed to load data. Please try again.",
+  "bidNotFound": "Bid not found for this task.",
+  "bidLoadError": "Failed to load bid information.",
+  "taskDataError": "Task data is not properly loaded.",
+  "taskInfoError": "Task information is not available.",
+  "withdrawBid": "Withdraw Bid",
+  "withdrawConfirm": "Are you sure you want to withdraw this bid?",
+  "withdraw": "Withdraw",
+  "withdrawSuccess": "Bid withdrawn successfully.",
+  "withdrawError": "Failed to withdraw bid.",
+  "editBid": "Edit Bid",
+  "success": "Success",
+  "taskTitleFallback": "Task Title",
+  "clientFallback": "Client",
+  "characters": "characters",
+  "emptyBidSent": {
+    "title": "No Bids Sent",
+    "subtitle": "Start bidding on tasks to see them here!"
+  },
+  "emptyActive": {
+    "title": "No Active Tasks",
+    "subtitle": "When clients accept your bids, active tasks will appear here."
+  },
+  "emptyPrevious": {
+    "title": "No Previous Tasks",
+    "subtitle": "Completed and cancelled tasks will appear here."
+  },
+  "emptyDefault": {
+    "title": "No Tasks Here",
+    "subtitle": "Tasks will appear here when available."
+  },
   "cancelConfirm": "Are you sure you want to cancel?",
   "no": "No",
   "yes": "Yes",
@@ -575,7 +606,7 @@
   "cancelError": "Something went wrong.",
   "verifyPending": "Your documents still need to be verified (this may take up to 48 hours),",
   "contactUs": "Contact us",
-  "submittingReport": "Submitting Report...",
+  "submittingReport": "Submitting report...",
   "cancelling": "Cancelling..."
 },
 
