Arabic client side

--- a/i18n/locales/ar.json
+++ b/i18n/locales/ar.json
@@ -146,12 +146,12 @@
      "errorTitle": "خطأ",
      "loadTasksError": "تعذر تحميل المهام.",
      "messages": "{{count}} رسائل غير مقروءة",
-     "needSomethingDone": "تحتاج شيئًا يُنجز؟",
-     "needSomethingDoneDesc": "لديك شيء في قائمة المهام؟ أنشئ مهمة واترك المنفذين يتولونها بموثوقية مع عروض تنافسية",
+     "needSomethingDone": "هل تحتاج لشيء ما؟",
+     "needSomethingDoneDesc": "لديك شيء في قائمة مهامك؟ أنشئ مهمة واترك المختصين يتولونها بموثوقية مع عروض تنافسية",
      "waitingOnTask": "في انتظار مهمة؟",
-     "waitingOnTaskDesc": "في انتظار عروض المنفذين على مهامك؟ تحقق من المهام المعلقة للحصول على التحديثات",
-     "tasksUnderway": "مهام قيد التنفيذ؟ اضغط للتحقق من تقدمها",
+     "waitingOnTaskDesc": "في انتظار المختصين لتقديم عروض على مهامك؟ تحقق من المهام المعلقة للحصول على التحديثات",
      "pendingTasks": "المهام المعلقة",
+     "tasksUnderway": "المهام قيد التنفيذ؟ اضغط للتحقق من تقدمها",
      "inProgressTasks": "المهام قيد التنفيذ",
      "status": {
        "pending": "قيد الانتظار",
@@ -173,7 +173,7 @@
      "completed": "مكتمل",
      "pending": "قيد الانتظار"
    },
-  "clientMyTasks": {
+   "clientMyTasks": {
    "pending": "قيد الانتظار",
    "started": "قيد التنفيذ",
    "completed": "مكتمل",
@@ -182,7 +182,6 @@
    "noTasks": "لا توجد مهام في حالة {{status}} حالياً",
    "fetchError": "حدث خطأ أثناء تحميل المهام.",
    "viewTaskDetails": "عرض تفاصيل المهمة",
-   "completed": "مكتملة",
    "cancelledByYou": "ألغيت بواسطتك",
    "cancelledByTasker": "ألغيت بواسطة مقدم الخدمة",
    "viewProfile": "عرض الملف الشخصي",
@@ -194,12 +193,25 @@
    "reportedTitle": "تم الإبلاغ",
    "reportedMessage": "تم الإبلاغ عن مقدم الخدمة بنجاح.",
    "errorTitle": "خطأ",
+   "chat": "محادثة",
+   "markAsDone": "تم الإنجاز",
+   "markAsDoneConfirmTitle": "تم الإنجاز",
+   "markAsDoneConfirmMessage": "هل أنت متأكد من أنك تريد وضع علامة على هذه المهمة كمكتملة؟",
+   "cancelTaskConfirmTitle": "إلغاء المهمة",
+   "cancelTaskConfirmMessage": "هل أنت متأكد من أنك تريد إلغاء هذه المهمة؟",
+   "successTitle": "نجح",
+   "taskCompletedMessage": "تم وضع علامة على المهمة كمكتملة!",
+   "taskCancelledMessage": "تم إلغاء المهمة!",
    "reportFailedMessage": "فشل في إرسال البلاغ.",
    "thankYouTitle": "شكراً لك!",
    "reviewSubmittedMessage": "تم إرسال تقييمك.",
    "reviewFailedMessage": "فشل في إرسال التقييم.",
    "submittingReport": "جاري إرسال البلاغ...",
-   "charactersCount": "{{count}}/300 حرف"
+   "charactersCount": "{{count}}/300 حرف",
+   "viewBids": "عرض العروض",
+   "bid": "عرض",
+   "bids": "عروض",
+   "received": "مستلمة"
   }
   ,
    "clientNotifications": {
@@ -269,7 +281,10 @@
        "continue": "متابعة",
        "validationError": "خطأ في التحقق",
        "titleTooShort": "عنوان المهمة يجب أن يكون 10 أحرف على الأقل.",
-       "descriptionTooShort": "وصف المهمة يجب أن يكون 25 حرفًا على الأقل."
+       "descriptionTooShort": "وصف المهمة يجب أن يكون 25 حرفًا على الأقل.",
+       "pleaseAddAddress": "يرجى إضافة عنوان المهمة",
+       "maxCharacters100": "100 حرف كحد أقصى",
+       "maxCharacters150": "150 حرف كحد أقصى"
      },
      "page3": {
        "title": "نشر مهمة",
@@ -280,9 +295,81 @@
        "finalPaymentNote": "سيتم الاتفاق على الدفع النهائي لاحقاً",
        "postTask": "نشر المهمة",
        "posting": "جاري النشر...",
-       "postingTask": "جاري نشر مهمتك..."
-     },
-     "addressFields": {
+       "postingTask": "جاري نشر مهمتك...",
+       "addressNotSpecified": "العنوان غير محدد",
+       "successTitle": "تم نشر المهمة",
+       "successDescription": "تم نشر مهمتك بنجاح",
+     "done": "تم"
+   },
+   "clientEditTask": {
+     "title": "تعديل المهمة",
+     "category": "الفئة",
+     "selectCategory": "اختر الفئة",
+     "taskTitle": "عنوان المهمة",
+     "taskTitlePlaceholder": "ماذا تحتاج أن يتم عمله؟",
+     "minCharacters": "{{count}} أحرف إضافية على الأقل",
+     "maxCharacters100": "100 حرف كحد أقصى",
+     "maxCharacters150": "150 حرف كحد أقصى",
+     "describeTask": "صف مهمتك",
+     "describeTaskPlaceholder": "أضف وصفًا أكثر تفصيلاً للمهمة التي تريد إنجازها",
+     "addImagesVideos": "إضافة صور/فيديوهات",
+     "selectedImages": "الصور المحددة",
+     "taskAddress": "عنوان المهمة",
+     "selectLocationOnMap": "اختر الموقع على الخريطة",
+     "editLocationOnMap": "تعديل الموقع على الخريطة",
+     "budget": "الميزانية",
+     "budgetPlaceholder": "ميزانيتك",
+     "updating": "جاري التحديث...",
+     "confirmChanges": "تأكيد التغييرات",
+     "selectTaskLocation": "اختر موقع المهمة",
+     "mapInstructions": "اضغط على الخريطة لاختيار الموقع الدقيق لمهمتك",
+     "confirmLocation": "تأكيد الموقع",
+     "titleTooShort": "عنوان المهمة يجب أن يكون 10 أحرف على الأقل",
+     "descriptionTooShort": "وصف المهمة يجب أن يكون 25 حرفًا على الأقل",
+     "pleaseEnterBudget": "يرجى إدخال الميزانية",
+     "validationError": "خطأ في التحقق",
+     "updateError": "فشل في تحديث المهمة. يرجى المحاولة مرة أخرى.",
+     "permissionDenied": "تم رفض الإذن",
+     "locationPermissionRequired": "مطلوب إذن الموقع",
+     "locationError": "فشل في الحصول على الموقع",
+     "mapPickerError": "فشل في فتح منتقي الخريطة"
+   },
+   "taskerTaskDetails": {
+     "title": "تفاصيل المهمة",
+     "inProgress": "قيد التنفيذ",
+     "postedOn": "تاريخ النشر",
+     "budget": "الميزانية",
+     "description": "الوصف",
+     "defaultDescription": "إنها حقيقة راسخة منذ فترة طويلة أن القارئ سوف يصرف انتباهه عن المحتوى المقروء للصفحة عندما إنها حقيقة راسخة منذ فترة طويلة أن القارئ سوف يصرف انتباهه عن المحتوى المقروء للصفحة عندما إنها حقيقة راسخة منذ فترة طويلة أن القارئ سوف يصرف انتباهه عن المحتوى المقروء للصفحة عندما إنها حقيقة راسخة منذ فترة طويلة أن القارئ سوف يصرف انتباهه عن المحتوى المقروء للصفحة عندما",
+     "images": "الصور",
+     "location": "الموقع",
+     "footerText": "قدم عرضاً على المهمة، سيقوم العملاء بعد ذلك باختيار مقدم الخدمة، والذي قد تكون أنت :)",
+     "biddingClosed": "تم إغلاق العطاءات",
+     "updateBid": "تحديث العرض",
+     "placeBid": "قدم عرضاً"
+   },
+   "taskerProfile": {
+     "taskDetails": "تفاصيل المهمة",
+     "taskerProfile": "ملف مقدم الخدمة",
+     "defaultLocation": "البحرين",
+     "about": "حول",
+     "defaultAbout": "إنها حقيقة راسخة منذ فترة طويلة أن القارئ سوف يصرف انتباهه عن المحتوى المقروء للصفحة عند النظر إلى تخطيطها. الهدف من استخدام",
+     "reviews": "التقييمات",
+     "avgRating": "متوسط التقييم",
+     "noReviewsYet": "لا توجد تقييمات بعد",
+     "noReviewsSubtitle": "لم يتم تقييم مقدم الخدمة هذا بعد",
+     "defaultComment": "إنها حقيقة راسخة منذ فترة طويلة أن القارئ سوف يصرف انتباهه عن المحتوى المقروء للصفحة عندما إنها حقيقة راسخة منذ فترة طويلة أن القارئ سوف يصرف انتباهه عن المحتوى المقروء للصفحة عندما",
+     "postedOn": "تاريخ النشر",
+     "budget": "الميزانية",
+     "description": "الوصف",
+     "noDescription": "لم يتم توفير وصف",
+     "images": "الصور",
+     "location": "الموقع",
+     "editTask": "تعديل المهمة",
+     "cancelTask": "إلغاء المهمة",
+     "markAsComplete": "تحديد كمكتملة"
+   },
+   "addressFields": {
        "houseNumber": "رقم المنزل/المبنى",
        "streetName": "اسم الشارع",
        "city": "المدينة",
@@ -361,8 +448,11 @@
    "address": "العنوان",
    "offeredPrice": "السعر المعروض",
    "editTask": "تعديل المهمة",
-   "viewBids": "عرض العروض",
-   "cancelTask": "إلغاء المهمة",
+     "viewBids": "عرض العروض",
+     "bid": "عرض",
+     "bids": "عروض",
+     "received": "مستلمة",
+     "cancelTask": "إلغاء المهمة",
    "category": "الفئة",
    "status": "الحالة",
    "createdAt": "تاريخ الإنشاء",
@@ -393,6 +483,52 @@
    "markCompletedError": "تعذر تحديد المهمة كمنجزة.",
    "editNotAllowed": "لا يمكنك تعديل هذه المهمة لوجود عرض."
   },
+   "clientTaskDetails": {
+   "description": "الوصف",
+   "address": "العنوان",
+   "offeredPrice": "السعر المعروض",
+   "editTask": "تعديل المهمة",
+   "viewBids": "عرض العروض",
+   "bid": "عرض",
+   "bids": "عروض",
+   "received": "مستلمة",
+   "cancelTask": "إلغاء المهمة",
+   "category": "الفئة",
+   "status": "الحالة",
+   "createdAt": "تاريخ الإنشاء",
+   "bidCount": "عدد العروض",
+   "notProvided": "لم يتم التقديم",
+   "completingTask": "جارٍ إنهاء المهمة...",
+   "cancelingTask": "جارٍ إلغاء المهمة...",
+   "offeredPrice": "السعر المعروض",
+   "description": "الوصف",
+   "location": "الموقع",
+   "images": "الصور",
+   "noImages": "لا توجد صور",
+   "category": "الفئة",
+   "bidCount": "عدد العروض",
+   "createdAt": "تاريخ الإنشاء",
+   "markCompleted": "تم الإنجاز",
+   "markCompletedConfirmTitle": "تم الإنجاز",
+   "markCompletedConfirmMessage": "هل أنت متأكد أنك تريد تحديد هذه المهمة كمنجزة؟",
+   "cancelTaskConfirmTitle": "إلغاء المهمة",
+   "cancelTaskConfirmMessage": "هل أنت متأكد أنك تريد إلغاء هذه المهمة؟",
+   "no": "لا",
+   "yes": "نعم",
+   "taskCancelled": "تم إلغاء المهمة",
+   "errorTitle": "خطأ",
+   "loadTaskError": "فشل في تحميل المهمة.",
+   "userIdNotFound": "لم يتم العثور على المستخدم.",
+   "cancelTaskError": "فشل في إلغاء المهمة.",
+   "markCompletedError": "تعذر تحديد المهمة كمنجزة.",
+   "editNotAllowed": "لا يمكنك تعديل هذه المهمة لوجود عرض.",
+   "taskDetails": "تفاصيل المهمة",
+   "taskerProfile": "ملف مقدم الخدمة",
+   "postedOn": "تاريخ النشر",
+   "budget": "الميزانية",
+   "noDescription": "لم يتم تقديم وصف",
+   "markAsComplete": "تحديد كمكتملة"
+  },
    "clientViewBids": {
      "title": "العروض المستلمة",
      "chat": "محادثة",
@@ -400,10 +536,16 @@
      "noBids": "لم يتم استلام أي عروض بعد.",
      "acceptedTitle": "تم قبول العرض",
      "acceptedMessage": "لقد قبلت عرض {{name}}.",
-     "acceptingBid": "جاري القبول..."
-  
-  
-   },
+     "acceptingBid": "جاري القبول...",
+     "accepted": "تم القبول",
+     "alreadySelected": "تم الاختيار مسبقاً",
+     "viewProfile": "عرض الملف الشخصي",
+     "priceOffered": "السعر المعروض",
+     "currency": "د.ب",
+     "taskerFallbackName": "مقدم الخدمة",
+     "ok": "موافق",
+     "acceptError": "فشل في قبول العرض"
+  },
   "clientReview": {
    "title": "قيّم مقدم الخدمة",
    "commentPlaceholder": "اكتب تعليقاً...",
@@ -664,7 +806,7 @@
      "verificationApproved": "تم الموافقة على مستنداتك. أنت الآن معتمد!",
      "verificationDeclined": "تم رفض مستنداتك. يرجى إعادة التحميل للحصول على الاعتماد."
    },
-   "taskerProfile": {
+   "taskerProfileEdit": {
    "edit": "تعديل الملف الشخصي",
    "documents": "المستندات المرفوعة",
    "loadError": "فشل في تحميل ملف المنفذ الشخصي.",
@@ -676,6 +818,9 @@
    "reviews": "التقييمات",
    "avgRating": "متوسط التقييم:",
    "noReviews": "لا توجد تقييمات بعد",
+   "noReviewsYet": "لا توجد تقييمات بعد",
+   "noReviewsSubtitle": "لم يتم تقييم مقدم الخدمة هذا بعد",
+   "loadingProfile": "جاري تحميل ملف مقدم الخدمة...",
    "bank": "الحساب البنكي",
    "payments": "مدفوعاتي",
    "reviews": "تقييماتي",
@@ -827,6 +972,25 @@
      "locationRequired": "الموقع مطلوب",
      "pleaseSelectLocation": "يرجى تحديد موقع باستخدام الخريطة.",
      "couldNotOpenMaps": "لا يمكن فتح خرائط جوجل على هذا الجهاز.",
+     "mapError": "لا يمكن فتح خرائط جوجل على هذا الجهاز.",
+     "taskLocation": "موقع المهمة",
+     "taskTitle": "عنوان المهمة",
+     "reportSubmitted": "تم إرسال التقرير",
+     "reportThankYou": "شكراً لك على تقريرك. سنراجعه قريباً.",
+     "reportError": "فشل في إرسال التقرير. يرجى المحاولة مرة أخرى.",
+     "reportTasker": "الإبلاغ عن مقدم الخدمة",
+     "reportDescription": "يرجى وصف المشكلة مع مقدم الخدمة:",
+     "reportPlaceholder": "وصف المشكلة...",
+     "cancel": "إلغاء",
+     "submit": "إرسال",
+     "submittingReport": "جارٍ إرسال التقرير...",
+     "reportUser": "الإبلاغ عن المستخدم",
+     "bid": "عرض",
+     "bids": "عروض",
+     "received": "مستلمة",
+     "noTasksYet": "ليس لديك أي مهام {{status}} بعد.",
+     "tasksStatus": "مهام {{status}} لا",
+     "currency": "د.ب",
      "couldNotGetLocation": "لا يمكن الحصول على موقعك الحالي.",
      "couldNotOpenMapPicker": "لا يمكن فتح منتقي الخريطة.",
      "invalidEmail": "بريد إلكتروني غير صحيح",
@@ -927,7 +1091,9 @@
      "acceptError": "لا يمكن قبول العرض. يرجى المحاولة مرة أخرى.",
      "loadError": "فشل في تحميل العروض. يرجى المحاولة مرة أخرى.",
      "taskerFallbackName": "مقدم الخدمة",
-     "ok": "حسناً"
+     "ok": "حسناً",
+     "accepted": "تم القبول",
+     "alreadySelected": "تم الاختيار مسبقاً"
    },
 
    "clientEditTask": {
@@ -943,7 +1109,29 @@
        "location": "العنوان",
        "price": "السعر ({{currency}})"
      }
-        }
+        },
+   "taskerProfile": {
+     "taskDetails": "تفاصيل المهمة",
+     "taskerProfile": "ملف مقدم الخدمة",
+     "defaultLocation": "البحرين",
+     "about": "حول",
+     "defaultAbout": "إنها حقيقة راسخة منذ فترة طويلة أن القارئ سوف يصرف انتباهه عن المحتوى المقروء للصفحة عند النظر إلى تخطيطها. الهدف من استخدام",
+     "reviews": "التقييمات",
+     "avgRating": "متوسط التقييم",
+     "noReviewsYet": "لا توجد تقييمات بعد",
+     "noReviewsSubtitle": "لم يتم تقييم مقدم الخدمة هذا بعد",
+     "defaultComment": "إنها حقيقة راسخة منذ فترة طويلة أن القارئ سوف يصرف انتباهه عن المحتوى المقروء للصفحة عندما إنها حقيقة راسخة منذ فترة طويلة أن القارئ سوف يصرف انتباهه عن المحتوى المقروء للصفحة عندما",
+     "postedOn": "تاريخ النشر",
+     "budget": "الميزانية",
+     "description": "الوصف",
+     "noDescription": "لم يتم توفير وصف",
+     "images": "الصور",
+     "location": "الموقع",
+     "editTask": "تعديل المهمة",
+     "cancelTask": "إلغاء المهمة",
+     "markAsComplete": "تحديد كمكتملة",
+     "loadError": "فشل في تحميل ملف مقدم الخدمة."
+   }
    }
   
   
