--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -136,8 +136,8 @@
     "needSomethingDoneDesc": "Have something on your to-do list? Post a task and let Taskers handle it reliably with competitive offers",
     "waitingOnTask": "Waiting on a Task?",
     "waitingOnTaskDesc": "Waiting for Taskers to bid on your tasks? Check Pending tasks for updates",
-    "tasksUnderway": "Tasks underway? Tap to check their progress",
     "pendingTasks": "Pending Tasks",
+    "tasksUnderway": "Tasks underway? Tap to check their progress",
     "inProgressTasks": "In Progress Tasks",
     "status": {
       "pending": "Pending",
@@ -159,7 +159,7 @@
     "completed": "Completed",
     "pending": "Pending"
   },
-"clientMyTasks": {
+  "clientMyTasks": {
   "pending": "Pending",
     "started": "In Progress",
     "completed": "Completed",
@@ -168,7 +168,6 @@
   "noTasks": "No tasks in {{status}} status currently",
   "fetchError": "An error occurred while fetching your tasks.",
   "viewTaskDetails": "View Task Details",
-  "completed": "Completed",
   "cancelledByYou": "Cancelled by you",
   "cancelledByTasker": "Cancelled by Tasker",
   "viewProfile": "View Profile",
@@ -180,12 +179,25 @@
   "reportedTitle": "Reported",
   "reportedMessage": "Tasker has been reported successfully.",
   "errorTitle": "Error",
+  "chat": "Chat",
+  "markAsDone": "Mark as Done",
+  "markAsDoneConfirmTitle": "Mark as Done",
+  "markAsDoneConfirmMessage": "Are you sure you want to mark this task as completed?",
+  "cancelTaskConfirmTitle": "Cancel Task",
+  "cancelTaskConfirmMessage": "Are you sure you want to cancel this task?",
+  "successTitle": "Success",
+  "taskCompletedMessage": "Task has been marked as completed!",
+  "taskCancelledMessage": "Task has been cancelled!",
   "reportFailedMessage": "Failed to submit report.",
   "thankYouTitle": "Thank you!",
   "reviewSubmittedMessage": "Your review was submitted.",
   "reviewFailedMessage": "Failed to submit review.",
   "submittingReport": "Submitting Report...",
-  "charactersCount": "{{count}}/300 characters"
+  "charactersCount": "{{count}}/300 characters",
+  "viewBids": "View Bids",
+  "bid": "bid",
+  "bids": "bids",
+  "received": "received"
 }
 ,
   "clientNotifications": {
@@ -255,7 +267,10 @@
       "continue": "Continue",
       "validationError": "Validation Error",
       "titleTooShort": "Task title must be at least 10 characters long.",
-      "descriptionTooShort": "Task description must be at least 25 characters long."
+      "descriptionTooShort": "Task description must be at least 25 characters long.",
+      "pleaseAddAddress": "Please add a task address",
+      "maxCharacters100": "Maximum 100 characters",
+      "maxCharacters150": "Maximum 150 characters"
     },
     "page3": {
       "title": "Post a Task",
@@ -266,16 +281,67 @@
       "finalPaymentNote": "Final payment will be agreed on later",
       "postTask": "Post Task",
       "posting": "Posting...",
-      "postingTask": "Posting your task..."
-    },
-    "addressFields": {
+      "postingTask": "Posting your task...",
+      "addressNotSpecified": "Address not specified",
+      "successTitle": "Task Posted",
+      "successDescription": "Your Task has been successfully posted",
+    "done": "Done"
+  },
+  "clientEditTask": {
+    "title": "Edit Task",
+    "category": "Category",
+    "selectCategory": "Select Category",
+    "taskTitle": "Task Title",
+    "taskTitlePlaceholder": "What do you need done?",
+    "minCharacters": "Min {{count}} more characters",
+    "maxCharacters100": "Maximum 100 characters",
+    "maxCharacters150": "Maximum 150 characters",
+    "describeTask": "Describe your Task",
+    "describeTaskPlaceholder": "Add a more detailed description of the task you want done",
+    "addImagesVideos": "Add Images/Videos",
+    "selectedImages": "Selected Images",
+    "taskAddress": "Task Address",
+    "selectLocationOnMap": "Select Location on Map",
+    "editLocationOnMap": "Edit Location on Map",
+    "budget": "Budget",
+    "budgetPlaceholder": "Your Budget",
+    "updating": "Updating...",
+    "confirmChanges": "Confirm Changes",
+    "selectTaskLocation": "Select Task Location",
+    "mapInstructions": "Tap on the map to select the exact location for your task",
+    "confirmLocation": "Confirm Location",
+    "titleTooShort": "Title must be at least 10 characters long",
+    "descriptionTooShort": "Description must be at least 25 characters long",
+    "pleaseEnterBudget": "Please enter a budget",
+    "validationError": "Validation Error",
+    "updateError": "Failed to update task. Please try again.",
+    "permissionDenied": "Permission denied",
+    "locationPermissionRequired": "Location permission is required",
+    "locationError": "Failed to get location",
+    "mapPickerError": "Failed to open map picker"
+  },
+  "taskerTaskDetails": {
+    "title": "Task Details",
+    "inProgress": "In Progress",
+    "postedOn": "Posted on",
+    "budget": "BUDGET",
+    "description": "Description",
+    "defaultDescription": "It is a long established fact that a reader will be distracted by the readable content of a page when It is a long established fact that a reader will be distracted by the readable content of a page when It is a long established fact that a reader will be distracted by the readable content of a page when It is a long established fact that a reader will be distracted by the readable content of a page when",
+    "images": "Images",
+    "location": "Location",
+    "footerText": "Place a Bid on the Task, Clients will then select a Tasker, Which could be you :)",
+    "biddingClosed": "Bidding Closed",
+    "updateBid": "Update Bid",
+    "placeBid": "Place a bid"
+  },
+  "addressFields": {
       "houseNumber": "House/Building Number",
       "streetName": "Street Name",
       "city": "City",
       "state": "State/Province (Optional)",
       "zipCode": "ZIP/Postal Code (Optional)"
     },
-    "addressSectionTitle": "Address Details",
+  "addressSectionTitle": "Address Details",
     "budgetSectionTitle": "Budget",
     "successTitle": "Task Posted",
     "successMessage": "Your task has been successfully posted.",
@@ -347,8 +413,11 @@
   "address": "Address",
   "offeredPrice": "Offered Price",
   "editTask": "Edit Task",
-  "viewBids": "View Bids",
-  "cancelTask": "Cancel Task",
+    "viewBids": "View Bids",
+    "bid": "bid",
+    "bids": "bids",
+    "received": "received",
+    "cancelTask": "Cancel Task",
   "category": "Category",
   "status": "Status",
   "createdAt": "Created At",
@@ -379,6 +448,52 @@
   "markCompletedError": "Could not mark the task as completed.",
   "editNotAllowed": "You can't edit this task because a tasker has already placed a bid."
 },
+  "clientTaskDetails": {
+    "description": "Description",
+    "address": "Address",
+    "offeredPrice": "Offered Price",
+    "editTask": "Edit Task",
+    "viewBids": "View Bids",
+    "bid": "bid",
+    "bids": "bids",
+    "received": "received",
+    "cancelTask": "Cancel Task",
+    "category": "Category",
+    "status": "Status",
+    "createdAt": "Created At",
+    "bidCount": "Number of Bids",
+    "notProvided": "Not provided",
+    "completingTask": "Marking as completed...",
+    "cancelingTask": "Cancelling task...",
+    "offeredPrice": "Offered Price",
+    "description": "Description",
+    "location": "Location",
+    "images": "Images",
+    "noImages": "No images",
+    "category": "Category",
+    "bidCount": "Bid Count",
+    "createdAt": "Created At",
+    "markCompleted": "Mark as Completed",
+    "markCompletedConfirmTitle": "Mark as Completed",
+    "markCompletedConfirmMessage": "Are you sure you want to mark this task as completed?",
+    "cancelTaskConfirmTitle": "Cancel Task",
+    "cancelTaskConfirmMessage": "Are you sure you want to cancel this task?",
+    "no": "No",
+    "yes": "Yes",
+    "taskCancelled": "Task Cancelled",
+    "errorTitle": "Error",
+    "loadTaskError": "Failed to load task.",
+    "userIdNotFound": "User ID not found.",
+    "cancelTaskError": "Failed to cancel task.",
+    "markCompletedError": "Could not mark the task as completed.",
+    "editNotAllowed": "You can't edit this task because a tasker has already placed a bid.",
+    "taskDetails": "Task Details",
+    "taskerProfile": "Tasker Profile",
+    "postedOn": "Posted on",
+    "budget": "BUDGET",
+    "noDescription": "No description provided",
+    "markAsComplete": "Mark as Complete"
+  },
   "clientViewBids": {
     "title": "Task Bids",
     "chat": "Chat",
@@ -395,7 +510,9 @@
     "acceptError": "Couldn't accept the bid. Please try again.",
     "loadError": "Failed to load bids. Please try again.",
     "taskerFallbackName": "Tasker",
-    "ok": "OK"
+    "ok": "OK",
+    "accepted": "Accepted",
+    "alreadySelected": "Already Selected"
   },
 "clientReview": {
   "title": "Rate Your Tasker",
@@ -640,7 +757,7 @@
     "verificationApproved": "Your documents were approved. You're now verified!",
     "verificationDeclined": "Your documents were declined. Please re-upload to get verified."
   },
-  "taskerProfile": {
+  "taskerProfileEdit": {
   "edit": "Edit Profile",
   "documents": "Uploaded Documents",
   "loadError": "Failed to load tasker profile.",
@@ -652,6 +769,9 @@
   "reviews": "Reviews",
   "avgRating": "Avg Rating:",
   "noReviews": "No reviews yet",
+  "noReviewsYet": "No Reviews Yet",
+  "noReviewsSubtitle": "This Tasker hasn't been rated yet",
+  "loadingProfile": "Loading tasker profile...",
   "bank": "Bank Account",
   "payments": "My Payments",
   "reviews": "My Reviews",
@@ -804,6 +924,25 @@
     "locationRequired": "Location Required",
     "pleaseSelectLocation": "Please select a location using the map.",
     "couldNotOpenMaps": "Could not open Google Maps on this device.",
+    "mapError": "Could not open Google Maps on this device.",
+    "taskLocation": "Task Location",
+    "taskTitle": "Task Title",
+    "reportSubmitted": "Report Submitted",
+    "reportThankYou": "Thank you for your report. We will review it shortly.",
+    "reportError": "Failed to submit report. Please try again.",
+    "reportTasker": "Report Tasker",
+    "reportDescription": "Please describe the issue with this tasker:",
+    "reportPlaceholder": "Describe the issue...",
+    "cancel": "Cancel",
+    "submit": "Submit",
+    "submittingReport": "Submitting report...",
+    "reportUser": "Report User",
+    "bid": "bid",
+    "bids": "bids",
+    "received": "received",
+    "noTasksYet": "You don't have any {{status}} tasks yet.",
+    "tasksStatus": "Tasks {{status}} No",
+    "currency": "BHD",
     "couldNotGetLocation": "Could not get your current location.",
     "couldNotOpenMapPicker": "Could not open map picker.",
     "invalidEmail": "Invalid Email",
@@ -904,7 +1043,9 @@
     "acceptError": "Couldn't accept the bid. Please try again.",
     "loadError": "Failed to load bids. Please try again.",
     "taskerFallbackName": "Tasker",
-    "ok": "OK"
+    "ok": "OK",
+    "accepted": "Accepted",
+    "alreadySelected": "Already Selected"
   },
 "clientEditTask": {
     "heading": "Edit Task",
@@ -919,5 +1060,27 @@
       "location": "Address",
       "price": "Price ({{currency}})"
     }
+  },
+  "taskerProfile": {
+    "taskDetails": "Task Details",
+    "taskerProfile": "Tasker's Profile",
+    "defaultLocation": "Bahrain",
+    "about": "About",
+    "defaultAbout": "It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using",
+    "reviews": "Reviews",
+    "avgRating": "Avg Rating",
+    "noReviewsYet": "No Reviews Yet",
+    "noReviewsSubtitle": "This Tasker hasn't been rated yet",
+    "defaultComment": "It is a long established fact that a reader will be distracted by the readable content of a page when It is a long established fact that a reader will be distracted by the readable content of a page when",
+    "postedOn": "Posted on",
+    "budget": "BUDGET",
+    "description": "Description",
+    "noDescription": "No description provided",
+    "images": "Images",
+    "location": "Location",
+    "editTask": "Edit Task",
+    "cancelTask": "Cancel Task",
+    "markAsComplete": "Mark as Complete",
+    "loadError": "Failed to load tasker profile."
   }
 }
